fixed white space issue with svg at small resolutions

--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ h1 {
   height: 225px;
   width: 100%;
   display: block;
+  margin-top: -2px;
 }
 
 .bands-svg__background {
